--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeNoActionBar">
-        <activity android:name=".MovieDetailsActivity"></activity>
-        <activity android:name=".FavoritesActivity"></activity>
-        <activity android:name=".SearchActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+        <activity android:name=".TicketsActivity"></activity>
+        <activity android:name=".MovieDetailsActivity" />
+        <activity android:name=".FavoritesActivity" />
+        <activity
+            android:name=".SearchActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
